project1/syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: %empty
    3           | ExtDef ExtDefList

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier ExtDecList error
    8       | Specifier error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList
   11           | VarDec ExtDecList error

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT ID LC DefList RC
   15                | STRUCT ID

   16 VarDec: ID
   17       | VarDec LB INT RB
   18       | VarDec LB INT error

   19 FunDec: ID LP VarList RP
   20       | ID LP RP
   21       | ID LP VarList error
   22       | ID LP error

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec VarList error
   25        | ParamDec

   26 ParamDec: Specifier VarDec

   27 CompSt: LC DefList StmtList RC

   28 StmtList: %empty
   29         | Stmt StmtList

   30 Stmt: Exp SEMI
   31     | CompSt
   32     | RETURN Exp SEMI
   33     | IF LP Exp RP Stmt
   34     | IF LP Exp RP Stmt ELSE Stmt
   35     | WHILE LP Exp RP Stmt
   36     | WHILE LP Exp error Stmt
   37     | Exp error
   38     | RETURN Exp error
   39     | IF LP Exp error Stmt
   40     | IF error Exp RP Stmt
   41     | FOR LP Exp SEMI Exp SEMI Exp RP Stmt

   42 DefList: %empty
   43        | Def DefList

   44 Def: Specifier DecList SEMI
   45    | Specifier DecList error
   46    | error DecList SEMI

   47 DecList: Dec
   48        | Dec COMMA DecList
   49        | Dec DecList error

   50 Dec: VarDec
   51    | VarDec ASSIGN Exp

   52 Args: Exp COMMA Args
   53     | Exp

   54 Exp: Exp ASSIGN Exp
   55    | Exp AND Exp
   56    | Exp OR Exp
   57    | Exp LT Exp
   58    | Exp LE Exp
   59    | Exp GT Exp
   60    | Exp GE Exp
   61    | Exp NE Exp
   62    | Exp EQ Exp
   63    | Exp PLUS Exp
   64    | Exp MINUS Exp
   65    | Exp MUL Exp
   66    | Exp DIV Exp
   67    | LP Exp RP
   68    | LP Exp error
   69    | MINUS Exp
   70    | NOT Exp
   71    | ID LP Args RP
   72    | ID LP Args error
   73    | ID LP RP
   74    | ID LP error
   75    | Exp LB Exp RB
   76    | Exp LB Exp error
   77    | Exp DOT ID
   78    | ID
   79    | INT
   80    | FLOAT
   81    | CHAR
   82    | Exp ILLEGAL_TOKEN Exp
   83    | ILLEGAL_TOKEN


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 11 18 21 22 24 36 37 38 39 40 45 46 49 68 72 74 76
LOWER_ERROR (258)
SEMI (259) 4 5 30 32 41 44 46
COMMA (260) 10 23 48 52
LC (261) 14 27
RC (262) 14 27
TYPE (263) 12
STRUCT (264) 14 15
IF (265) 33 34 39 40
WHILE (266) 35 36
RETURN (267) 32 38
FOR (268) 41
INT (269) 17 18 79
FLOAT (270) 80
CHAR (271) 81
ID (272) 14 15 16 19 20 21 22 71 72 73 74 77 78
ASSIGN (273) 51 54
OR (274) 56
AND (275) 55
LT (276) 57
LE (277) 58
GT (278) 59
GE (279) 60
NE (280) 61
EQ (281) 62
LOWER_MINUS (282)
PLUS (283) 63
MINUS (284) 64 69
MUL (285) 65
DIV (286) 66
NOT (287) 70
LP (288) 19 20 21 22 33 34 35 36 39 41 67 68 71 72 73 74
RP (289) 19 20 33 34 35 40 41 67 71 73
LB (290) 17 18 75 76
RB (291) 17 75
DOT (292) 77
ILLEGAL_TOKEN (293) 82 83
ELSE (294) 34


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
Program (41)
    on left: 1, on right: 0
ExtDefList (42)
    on left: 2 3, on right: 1 3
ExtDef (43)
    on left: 4 5 6 7 8, on right: 3
ExtDecList (44)
    on left: 9 10 11, on right: 4 7 10 11
Specifier (45)
    on left: 12 13, on right: 4 5 6 7 8 26 44 45
StructSpecifier (46)
    on left: 14 15, on right: 13
VarDec (47)
    on left: 16 17 18, on right: 9 10 11 17 18 26 50 51
FunDec (48)
    on left: 19 20 21 22, on right: 6
VarList (49)
    on left: 23 24 25, on right: 19 21 23 24
ParamDec (50)
    on left: 26, on right: 23 24 25
CompSt (51)
    on left: 27, on right: 6 31
StmtList (52)
    on left: 28 29, on right: 27 29
Stmt (53)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41, on right: 29 33 34
    35 36 39 40 41
DefList (54)
    on left: 42 43, on right: 14 27 43
Def (55)
    on left: 44 45 46, on right: 43
DecList (56)
    on left: 47 48 49, on right: 44 45 46 48 49
Dec (57)
    on left: 50 51, on right: 47 48 49
Args (58)
    on left: 52 53, on right: 52 71 72
Exp (59)
    on left: 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71
    72 73 74 75 76 77 78 79 80 81 82 83, on right: 30 32 33 34 35 36
    37 38 39 40 41 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
    67 68 69 70 75 76 77 82


State 0

    0 $accept: . Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


State 2

   14 StructSpecifier: STRUCT . ID LC DefList RC
   15                | STRUCT . ID

    ID  shift, and go to state 8


State 3

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 4

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 5

    3 ExtDefList: ExtDef . ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 2 (ExtDefList)

    ExtDefList       go to state 10
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . ExtDecList error
    8       | Specifier . error

    error  shift, and go to state 11
    SEMI   shift, and go to state 12
    ID     shift, and go to state 13

    ExtDecList  go to state 14
    VarDec      go to state 15
    FunDec      go to state 16


State 7

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


State 8

   14 StructSpecifier: STRUCT ID . LC DefList RC
   15                | STRUCT ID .

    LC  shift, and go to state 17

    $default  reduce using rule 15 (StructSpecifier)


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


State 11

    8 ExtDef: Specifier error .

    $default  reduce using rule 8 (ExtDef)


State 12

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 13

   16 VarDec: ID .
   19 FunDec: ID . LP VarList RP
   20       | ID . LP RP
   21       | ID . LP VarList error
   22       | ID . LP error

    LP  shift, and go to state 18

    $default  reduce using rule 16 (VarDec)


State 14

    4 ExtDef: Specifier ExtDecList . SEMI
    7       | Specifier ExtDecList . error

    error  shift, and go to state 19
    SEMI   shift, and go to state 20


State 15

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   11           | VarDec . ExtDecList error
   17 VarDec: VarDec . LB INT RB
   18       | VarDec . LB INT error

    COMMA  shift, and go to state 21
    ID     shift, and go to state 22
    LB     shift, and go to state 23

    $default  reduce using rule 9 (ExtDecList)

    ExtDecList  go to state 24
    VarDec      go to state 15


State 16

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 17

   14 StructSpecifier: STRUCT ID LC . DefList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 42 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


State 18

   19 FunDec: ID LP . VarList RP
   20       | ID LP . RP
   21       | ID LP . VarList error
   22       | ID LP . error

    error   shift, and go to state 31
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 32

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 34
    ParamDec         go to state 35


State 19

    7 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 7 (ExtDef)


State 20

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 21

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 22

    ExtDecList  go to state 36
    VarDec      go to state 15


State 22

   16 VarDec: ID .

    $default  reduce using rule 16 (VarDec)


State 23

   17 VarDec: VarDec LB . INT RB
   18       | VarDec LB . INT error

    INT  shift, and go to state 37


State 24

   11 ExtDecList: VarDec ExtDecList . error

    error  shift, and go to state 38


State 25

   27 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    LC             reduce using rule 42 (DefList)
    RC             reduce using rule 42 (DefList)
    IF             reduce using rule 42 (DefList)
    WHILE          reduce using rule 42 (DefList)
    RETURN         reduce using rule 42 (DefList)
    FOR            reduce using rule 42 (DefList)
    INT            reduce using rule 42 (DefList)
    FLOAT          reduce using rule 42 (DefList)
    CHAR           reduce using rule 42 (DefList)
    ID             reduce using rule 42 (DefList)
    MINUS          reduce using rule 42 (DefList)
    NOT            reduce using rule 42 (DefList)
    LP             reduce using rule 42 (DefList)
    ILLEGAL_TOKEN  reduce using rule 42 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 39
    Def              go to state 30


State 26

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 27

   46 Def: error . DecList SEMI

    ID  shift, and go to state 22

    VarDec   go to state 40
    DecList  go to state 41
    Dec      go to state 42


State 28

   44 Def: Specifier . DecList SEMI
   45    | Specifier . DecList error

    ID  shift, and go to state 22

    VarDec   go to state 40
    DecList  go to state 43
    Dec      go to state 42


State 29

   14 StructSpecifier: STRUCT ID LC DefList . RC

    RC  shift, and go to state 44


State 30

   43 DefList: Def . DefList

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    LC             reduce using rule 42 (DefList)
    RC             reduce using rule 42 (DefList)
    IF             reduce using rule 42 (DefList)
    WHILE          reduce using rule 42 (DefList)
    RETURN         reduce using rule 42 (DefList)
    FOR            reduce using rule 42 (DefList)
    INT            reduce using rule 42 (DefList)
    FLOAT          reduce using rule 42 (DefList)
    CHAR           reduce using rule 42 (DefList)
    ID             reduce using rule 42 (DefList)
    MINUS          reduce using rule 42 (DefList)
    NOT            reduce using rule 42 (DefList)
    LP             reduce using rule 42 (DefList)
    ILLEGAL_TOKEN  reduce using rule 42 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 45
    Def              go to state 30


State 31

   22 FunDec: ID LP error .

    $default  reduce using rule 22 (FunDec)


State 32

   20 FunDec: ID LP RP .

    $default  reduce using rule 20 (FunDec)


State 33

   26 ParamDec: Specifier . VarDec

    ID  shift, and go to state 22

    VarDec  go to state 46


State 34

   19 FunDec: ID LP VarList . RP
   21       | ID LP VarList . error

    error  shift, and go to state 47
    RP     shift, and go to state 48


State 35

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec . VarList error
   25        | ParamDec .

    COMMA   shift, and go to state 49
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 25 (VarList)

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 50
    ParamDec         go to state 35


State 36

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 37

   17 VarDec: VarDec LB INT . RB
   18       | VarDec LB INT . error

    error  shift, and go to state 51
    RB     shift, and go to state 52


State 38

   11 ExtDecList: VarDec ExtDecList error .

    $default  reduce using rule 11 (ExtDecList)


State 39

   27 CompSt: LC DefList . StmtList RC

    LC             shift, and go to state 25
    IF             shift, and go to state 53
    WHILE          shift, and go to state 54
    RETURN         shift, and go to state 55
    FOR            shift, and go to state 56
    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63
    ILLEGAL_TOKEN  shift, and go to state 64

    $default  reduce using rule 28 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


State 40

   17 VarDec: VarDec . LB INT RB
   18       | VarDec . LB INT error
   50 Dec: VarDec .
   51    | VarDec . ASSIGN Exp

    ASSIGN  shift, and go to state 69
    LB      shift, and go to state 23

    $default  reduce using rule 50 (Dec)


State 41

   46 Def: error DecList . SEMI

    SEMI  shift, and go to state 70


State 42

   47 DecList: Dec .
   48        | Dec . COMMA DecList
   49        | Dec . DecList error

    COMMA  shift, and go to state 71
    ID     shift, and go to state 22

    $default  reduce using rule 47 (DecList)

    VarDec   go to state 40
    DecList  go to state 72
    Dec      go to state 42


State 43

   44 Def: Specifier DecList . SEMI
   45    | Specifier DecList . error

    error  shift, and go to state 73
    SEMI   shift, and go to state 74


State 44

   14 StructSpecifier: STRUCT ID LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


State 45

   43 DefList: Def DefList .

    $default  reduce using rule 43 (DefList)


State 46

   17 VarDec: VarDec . LB INT RB
   18       | VarDec . LB INT error
   26 ParamDec: Specifier VarDec .

    LB  shift, and go to state 23

    $default  reduce using rule 26 (ParamDec)


State 47

   21 FunDec: ID LP VarList error .

    $default  reduce using rule 21 (FunDec)


State 48

   19 FunDec: ID LP VarList RP .

    $default  reduce using rule 19 (FunDec)


State 49

   23 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 75
    ParamDec         go to state 35


State 50

   24 VarList: ParamDec VarList . error

    error  shift, and go to state 76


State 51

   18 VarDec: VarDec LB INT error .

    $default  reduce using rule 18 (VarDec)


State 52

   17 VarDec: VarDec LB INT RB .

    $default  reduce using rule 17 (VarDec)


State 53

   33 Stmt: IF . LP Exp RP Stmt
   34     | IF . LP Exp RP Stmt ELSE Stmt
   39     | IF . LP Exp error Stmt
   40     | IF . error Exp RP Stmt

    error  shift, and go to state 77
    LP     shift, and go to state 78


State 54

   35 Stmt: WHILE . LP Exp RP Stmt
   36     | WHILE . LP Exp error Stmt

    LP  shift, and go to state 79


State 55

   32 Stmt: RETURN . Exp SEMI
   38     | RETURN . Exp error

    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63
    ILLEGAL_TOKEN  shift, and go to state 64

    Exp  go to state 80


State 56

   41 Stmt: FOR . LP Exp SEMI Exp SEMI Exp RP Stmt

    LP  shift, and go to state 81


State 57

   79 Exp: INT .

    $default  reduce using rule 79 (Exp)


State 58

   80 Exp: FLOAT .

    $default  reduce using rule 80 (Exp)


State 59

   81 Exp: CHAR .

    $default  reduce using rule 81 (Exp)


State 60

   71 Exp: ID . LP Args RP
   72    | ID . LP Args error
   73    | ID . LP RP
   74    | ID . LP error
   78    | ID .

    LP  shift, and go to state 82

    $default  reduce using rule 78 (Exp)


State 61

   69 Exp: MINUS . Exp

    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63
    ILLEGAL_TOKEN  shift, and go to state 64

    Exp  go to state 83


State 62

   70 Exp: NOT . Exp

    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63
    ILLEGAL_TOKEN  shift, and go to state 64

    Exp  go to state 84


State 63

   67 Exp: LP . Exp RP
   68    | LP . Exp error

    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63
    ILLEGAL_TOKEN  shift, and go to state 64

    Exp  go to state 85


State 64

   83 Exp: ILLEGAL_TOKEN .

    $default  reduce using rule 83 (Exp)


State 65

   31 Stmt: CompSt .

    $default  reduce using rule 31 (Stmt)


State 66

   27 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 86


State 67

   29 StmtList: Stmt . StmtList

    LC             shift, and go to state 25
    IF             shift, and go to state 53
    WHILE          shift, and go to state 54
    RETURN         shift, and go to state 55
    FOR            shift, and go to state 56
    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63
    ILLEGAL_TOKEN  shift, and go to state 64

    $default  reduce using rule 28 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 87
    Stmt      go to state 67
    Exp       go to state 68


State 68

   30 Stmt: Exp . SEMI
   37     | Exp . error
   54 Exp: Exp . ASSIGN Exp
   55    | Exp . AND Exp
   56    | Exp . OR Exp
   57    | Exp . LT Exp
   58    | Exp . LE Exp
   59    | Exp . GT Exp
   60    | Exp . GE Exp
   61    | Exp . NE Exp
   62    | Exp . EQ Exp
   63    | Exp . PLUS Exp
   64    | Exp . MINUS Exp
   65    | Exp . MUL Exp
   66    | Exp . DIV Exp
   75    | Exp . LB Exp RB
   76    | Exp . LB Exp error
   77    | Exp . DOT ID
   82    | Exp . ILLEGAL_TOKEN Exp

    error          shift, and go to state 88
    SEMI           shift, and go to state 89
    ASSIGN         shift, and go to state 90
    OR             shift, and go to state 91
    AND            shift, and go to state 92
    LT             shift, and go to state 93
    LE             shift, and go to state 94
    GT             shift, and go to state 95
    GE             shift, and go to state 96
    NE             shift, and go to state 97
    EQ             shift, and go to state 98
    PLUS           shift, and go to state 99
    MINUS          shift, and go to state 100
    MUL            shift, and go to state 101
    DIV            shift, and go to state 102
    LB             shift, and go to state 103
    DOT            shift, and go to state 104
    ILLEGAL_TOKEN  shift, and go to state 105


State 69

   51 Dec: VarDec ASSIGN . Exp

    INT            shift, and go to state 57
    FLOAT          shift, and go to state 58
    CHAR           shift, and go to state 59
    ID             shift, and go to state 60
    MINUS          shift, and go to state 61
    NOT            shift, and go to state 62
    LP             shift, and go to state 63
    ILLEGAL_TOKEN  shift, and go to state 64

    Exp  go to state 106


State 70

   46 Def: error DecList SEMI .

    $default  reduce using rule 46 (Def)


State 71

   48 DecList: Dec COMMA . DecList

    ID  shift, and go to state 22

    VarDec   go to state 40
    DecList  go to state 107
    Dec      go to state 42


State 72

   49 DecList: Dec DecList . error
